# emit_opentelemetry

./: Cargo.toml  README.md
.github/workflows/: opentelemetry.yml
examples/getting_started/: Cargo.toml
examples/getting_started/src/: main.rs
examples/multi_framework/: Cargo.toml
examples/multi_framework/src/: main.rs
src/: internal_metrics.rs  lib.rs
