[package]
name = "emit_opentelemetry"
version = "0.28.0"
authors = ["emit contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emit-rs/emit_opentelemetry"
description = "Emit diagnostic events to the OpenTelemetry SDK."
keywords = ["logging", "tracing", "metrics", "observability"]
categories = ["development-tools::debugging"]
edition = "2021"

[workspace]
members = [
    "examples/getting_started",
]

[dependencies.emit]
version = "1"
features = ["std", "serde", "implicit_internal_rt"]
default-features = false

[dependencies.opentelemetry_sdk]
version = "0.28"
features = ["logs", "trace"]

[dependencies.opentelemetry]
version = "0.28"
features = ["logs", "trace"]

[dependencies.serde]
version = "1"

[dev-dependencies.emit]
version = "1"
features = ["implicit_rt"]

[dev-dependencies.opentelemetry_sdk]
version = "0.28"
features = ["logs", "trace", "testing"]

[dev-dependencies.opentelemetry-stdout]
version = "0.28"
features = ["logs", "trace"]
