[package]
name = "multi_framework"
version = "0.0.0"
edition = "2024"
publish = false

# emit
[dependencies.emit]
version = "1"

[dependencies.emit_opentelemetry]
path = "../../"

# log
[dependencies.log]
version = "0.4"

[dependencies.opentelemetry-appender-log]
version = "0.32"

# tracing
[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.tracing-opentelemetry]
version = "0.33"

# opentelemetry
[dependencies.opentelemetry_sdk]
version = "0.32"
features = ["rt-tokio", "trace", "logs"]

[dependencies.opentelemetry]
version = "0.32"
features = ["trace", "logs"]

[dependencies.opentelemetry-otlp]
version = "0.32"
features = ["trace", "logs", "grpc-tonic", "gzip-tonic"]

[dependencies.tonic]
version = "0.14"

# Misc.
[dependencies.tokio]
version = "1"
features = ["rt", "macros", "rt-multi-thread"]
